--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@prisma/client": "^5.4.2",
@@ -18,17 +20,27 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^10",
     "axios": "^1.5.1",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "happy-dom": "^12.9.1",
     "postcss": "^8",
     "prisma": "^5.4.2",
     "react-hot-toast": "^2.4.1",
+    "standard": "^17.1.0",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^0.34.6"
+  },
+  "eslintConfig": {
+    "extends": [
+      "standard"
+    ]
   }
 }
