--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "lightweight-charts": "^4.1.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
