--- a/.github/workflows/deploy_live.yml
+++ b/.github/workflows/deploy_live.yml
@@ -17,3 +17,5 @@ jobs:
                 node-version: '14'
             - name: Install dependencies
               run: npm install
+            - name: Run unit tests
+              run: npm run test
