--- a/.github/workflows/deploy_live.yml
+++ b/.github/workflows/deploy_live.yml
@@ -1,4 +1,4 @@
-name: Say hello
+name: Deploy to live
 
 on:
     push:
@@ -12,10 +12,16 @@ jobs:
             - uses: actions/checkout@v4
               with:
                 fetch-depth: 0
+
             - uses: actions/setup-node@v2
               with:
                 node-version: '14'
+
             - name: Install dependencies
               run: npm install
+
+            - name: Build app
+              run: npm run build
+
             - name: Run unit tests
               run: npm run test
